<resources>
    <string name="app_name">AlphaGrow</string>
    <string name="bem_vindo">Bem vindo [[usuario]]</string>
    <string name="ciclo">Seu(ua) [[planta]] está no ciclo de [[ciclo]]</string>
    <string name="colheita">Em [[n dias]] ele estará pronto para a [[prox ciclo]]</string>
    <string name="temperatura">Temperatura</string>
    <string name="umidade">Umidade</string>
    <string name="generic1">\??º</string>
    <string name="generic2">\??%</string>
    <string name="indice_ph">Indice de PH</string>
    <string name="iluminacao">Iluminação</string>
    <string name="generic3">\??</string>
    <string name="googleButton">Google</string>
    <string name="userEmail">Usuário</string>
    <string name="senha">Senha</string>
    <string name="facebookButton">Facebook</string>
    <string name="loginButton">Login</string>
    <string name="recomendacao">Recomendacao</string>
    <string name="nivel">Nivel:**</string>
    <string name="indicador">Indicador de situação atual x ideal</string>
    <string name="main_cultivo_empty">Voce ainda nao possui cultivos</string>
    <string name="plus_button">Adicionar</string>
    <string name="ciclo_empty_text_1">Voce ainda nao possui nenhum cultivo</string>
    <string name="title_activity_login">Logar no sistema</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="texto_recomendacao_umidade">A recomendação de umidade é de: </string>
    <string name="texto_recomendacao_temperatura">A recomendação de temperatura é de: </string>
    <string name="botao_modificar_cultivo">Modeificar Cultivo</string>
    <string name="nome">Nome</string>
    <string name="duracao">Duração</string>
    <string name="salvar">Salvar</string>
    loginButton

</resources>
