<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndicePHActivity"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewRecomendacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/recomendacao"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_border"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/component_size"
            android:paddingTop="@dimen/component_size"
            android:textAlignment="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:foregroundGravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewIndicePH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/indice_ph"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewMetricaIndicePH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/generic1"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/current_status" />

                    <ImageView
                        android:id="@+id/imageViewIndicadorPH"
                        android:layout_width="@dimen/metric_icon_size"
                        android:layout_height="15dp"
                        app:srcCompat="@drawable/arrow_down" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/imageButtonPlus"
                        android:layout_width="@dimen/regulation_button"
                        android:layout_height="@dimen/regulation_button"
                        app:srcCompat="@drawable/ic_launcher_background" />

                    <ImageButton
                        android:id="@+id/imageButtonMinus"
                        android:layout_width="@dimen/regulation_button"
                        android:layout_height="@dimen/regulation_button"
                        app:srcCompat="@mipmap/ic_launcher_round" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textViewNivel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|end"
                    android:text="@string/nivel"
                    android:textColor="@android:color/black" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="Grafico Indice PH x hora do dia"
            android:textColor="@android:color/black" />

    </LinearLayout>

</LinearLayout>